WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178196
Don't assert if mix-blend-mode is set to a non-separable blend mode on a composited layer
https://bugs.webkit.org/show_bug.cgi?id=178196
Summary
Don't assert if mix-blend-mode is set to a non-separable blend mode on a comp...
Simon Fraser (smfr)
Reported
2017-10-11 17:26:06 PDT
Don't assert if mix-blend-mode is set to a non-separable blend mode on a composited layer
Attachments
Patch
(4.18 KB, patch)
2017-10-11 17:27 PDT
,
Simon Fraser (smfr)
dbates
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-10-11 17:27:20 PDT
Created
attachment 323494
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-10-11 17:28:01 PDT
rdar://problem/34942337
Daniel Bates
Comment 3
2017-10-11 22:54:05 PDT
Comment on
attachment 323494
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=323494&action=review
> LayoutTests/compositing/filters/blend-mode-saturation.html:2 > +
Please remove this empty line as I do not feel it improves the readability of this file.
Daniel Bates
Comment 4
2017-10-11 22:55:03 PDT
Comment on
attachment 323494
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=323494&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=178196
Please add the radar URL under this line.
Simon Fraser (smfr)
Comment 5
2017-10-12 14:13:08 PDT
https://trac.webkit.org/r223254
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug