Don't assert if mix-blend-mode is set to a non-separable blend mode on a composited layer https://bugs.webkit.org/show_bug.cgi?id=178196 rdar://problem/34942337

Reviewed by Dan Bates.

Source/WebCore:

Core Animation doesn't support non-separable blend modes (hue, saturation, color, luminosity)
on layers, but don't assert if we try to use them.

Test: compositing/filters/blend-mode-saturation.html

* platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm:
(PlatformCAFilters::setBlendingFiltersOnLayer):

LayoutTests:

* compositing/filters/blend-mode-saturation-expected.txt: Added.
* compositing/filters/blend-mode-saturation.html: Added.

Canonical link: https://commits.webkit.org/194473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223254 268f45cc-cd09-0410-ab3c-d52691b4dbfc